# shacl

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml  validate.yaml
deploy/base/: deployment.yaml  kustomization.yaml  service.yaml
deploy/hackathon/: env.yaml  ingress.yaml  kustomization.yaml
examples/: cpsvno-birth-example.ttl  example-dataset.ttl  out.ttl
ottr/: README.md  data-concept.xlsx  data-organization.xlsx  data-xlnote.xlsx  data.xlsx  out.ttl  skos-tpl.ttl
shacl/: SKOS-AP-NO-shacl_shapes_2.00.ttl  examplettl.py
tests/: test_shacl.py  test_ttl.py
