[tool.poetry]
name = "shacl"
version = "0.1.0"
description = "Hackathon project to validate data.norge.no turtle files with SHACL"
authors = ["Magnus Bakken", "Terje Sylvarnes", "Veronica Heimsbakk", "Pål de Vibe", "Filip Hansen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "2.2.3"
tabulate = "0.9.0"
datacatalogtordf = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
